--- a/web/package.json
+++ b/web/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.4",
+    "@mantine/core": "^5.6.0",
+    "@mantine/hooks": "^5.6.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -10,9 +13,16 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "jodit-react": "^1.3.23",
+    "mobx": "^6.6.2",
+    "mobx-react-lite": "^3.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-feather": "^2.0.10",
     "react-scripts": "5.0.1",
+    "styled-components": "^5.3.6",
+    "suneditor": "^2.44.3",
+    "suneditor-react": "^3.4.1",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
@@ -39,5 +49,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/draftjs-to-html": "^0.8.1",
+    "@types/feather-icons": "^4.7.0",
+    "@types/html-to-draftjs": "^1.4.0",
+    "@types/react-calendar": "^3.5.3",
+    "@types/react-draft-wysiwyg": "^1.13.4",
+    "@types/styled-components": "^5.1.26"
   }
 }
