update homepage path for lcm web

--- a/web/package.json
+++ b/web/package.json
@@ -2,6 +2,7 @@
   "name": "web",
   "version": "0.1.0",
   "private": true,
+  "homepage": "/stage/lcm/",
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@mantine/core": "5.9.0",
