--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,6 +20,18 @@ jobs:
           go-version: 1.18
       - run: npm install -g typescript
       - run: make lcm
+      - name: SSH and resolve
+        env:
+          PRIVATE_KEY: ${{ secrets.PRIVATE_KEY  }}
+          HOSTNAME: ${{ secrets.HOSTNAME  }}
+          USER_NAME: ${{ secrets.USER_NAME  }}
+        run: |
+          echo "$PRIVATE_KEY" > private_key && chmod 600 private_key
+          ssh -o StrictHostKeyChecking=no -i private_key ${USER_NAME}@${HOSTNAME} '
+            
+            #Now we have got the access of EC2 and we will start the deploy .
+            pm2 delete lcm
+          '
       - name: SCP and Copy code
         env:
           PRIVATE_KEY: ${{ secrets.PRIVATE_KEY  }}
