add source path for npm to resolve pm2 path

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -52,5 +52,7 @@ jobs:
           ssh -o StrictHostKeyChecking=no -i private_key ${USER_NAME}@${HOSTNAME} '
             
             #Now we have got the access of EC2 and we will start the deploy .
+            export NVM_DIR="/home/ubuntu/.nvm"
+            [ -s "$NVM_DIR/nvm.sh" ] && . "$NVM_DIR/nvm.sh"
             make deploy_lcm
           '
