--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,26 +14,14 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 16.15.1
+          cache: "npm"
       - name: Setup Go
         uses: actions/setup-go@v2
         with:
           go-version: 1.18
       - run: npm install -g typescript
       - run: make lcm
-      - name: SSH and resolve
-        env:
-          PRIVATE_KEY: ${{ secrets.PRIVATE_KEY  }}
-          HOSTNAME: ${{ secrets.HOSTNAME  }}
-          USER_NAME: ${{ secrets.USER_NAME  }}
-        run: |
-          echo "$PRIVATE_KEY" > private_key && chmod 600 private_key
-          ssh -o StrictHostKeyChecking=no -i private_key ${USER_NAME}@${HOSTNAME} '
-            
-            #Now we have got the access of EC2 and we will start the deploy .
-            export NVM_DIR="/home/ubuntu/.nvm"
-            [ -s "$NVM_DIR/nvm.sh" ] && . "$NVM_DIR/nvm.sh"
-            pm2 delete lcm
-          '
+      - run: cp runner_duration.json ./app
       - name: SCP and Copy code
         env:
           PRIVATE_KEY: ${{ secrets.PRIVATE_KEY  }}
@@ -52,7 +40,5 @@ jobs:
           ssh -o StrictHostKeyChecking=no -i private_key ${USER_NAME}@${HOSTNAME} '
             
             #Now we have got the access of EC2 and we will start the deploy .
-            export NVM_DIR="/home/ubuntu/.nvm"
-            [ -s "$NVM_DIR/nvm.sh" ] && . "$NVM_DIR/nvm.sh"
-            make deploy_lcm
+            make lcm
           '
