--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,6 +21,20 @@ jobs:
       - run: npm install -g typescript
       - run: make lcm
       - run: cp runner_duration.json ./app
+      - name: SSH and resolve
+        env:
+          PRIVATE_KEY: ${{ secrets.PRIVATE_KEY  }}
+          HOSTNAME: ${{ secrets.HOSTNAME  }}
+          USER_NAME: ${{ secrets.USER_NAME  }}
+        run: |
+          echo "$PRIVATE_KEY" > private_key && chmod 600 private_key
+          ssh -o StrictHostKeyChecking=no -i private_key ${USER_NAME}@${HOSTNAME} '
+            
+            #Now we have got the access of EC2 and we will start the deploy .
+            export NVM_DIR="/home/ubuntu/.nvm"
+            [ -s "$NVM_DIR/nvm.sh" ] && . "$NVM_DIR/nvm.sh"
+            pm2 delete lcm
+          '
       - name: SCP and Copy code
         env:
           PRIVATE_KEY: ${{ secrets.PRIVATE_KEY  }}
@@ -39,5 +53,7 @@ jobs:
           ssh -o StrictHostKeyChecking=no -i private_key ${USER_NAME}@${HOSTNAME} '
             
             #Now we have got the access of EC2 and we will start the deploy .
-            make lcm
+            export NVM_DIR="/home/ubuntu/.nvm"
+            [ -s "$NVM_DIR/nvm.sh" ] && . "$NVM_DIR/nvm.sh"
+            make deploy_lcm
           '
