--- a/web/package.json
+++ b/web/package.json
@@ -19,6 +19,7 @@
     "mobx-react-lite": "^3.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-feather": "^2.0.10",
     "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
