--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -11,3 +11,10 @@ packages:
     emit_exact_table_names: false
     emit_result_struct_pointers: true
     emit_empty_slices: true
+overrides:
+  - column: "feedback.content"
+    nullable: true
+    go_type:
+      import: "gopkg.in/guregu/null.v4"
+      package: "null"
+      type: "String"
