--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -18,3 +18,15 @@ overrides:
       import: "gopkg.in/guregu/null.v4"
       package: "null"
       type: "String"
+  - column: "feedback.image_uri"
+    nullable: true
+    go_type:
+      import: "gopkg.in/guregu/null.v4"
+      package: "null"
+      type: "String"
+  - column: "feedback.comment"
+    nullable: true
+    go_type:
+      import: "gopkg.in/guregu/null.v4"
+      package: "null"
+      type: "String"
